deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
    - port: 5000
      targetPort: 5000

#kubectl expose deployment nodejs-deployment --type=NodePort --name=nodejs-service --target-port='8080' --port='8080' -n devops
